# structural_priming

./: README.md  pyproject.toml
src/: 01_data_processing.ipynb  02_analysis.ipynb  03_make_pseudo_pairs.ipynb  04_statistics_for_real_data.ipynb  05_statistics_for_pseudo_data.ipynb
